Bug fix deconnect, New Javadoc