@@ -4,13 +4,7 @@ import java.util.function.IntToDoubleFunction;
 
 /**
  * Bewertet die Güte eines Fits über das reduzierte Chi-Quadrat und schätzt bei Bedarf die dafür
- * nötige Messunsicherheit (sigma) aus den Fit-Residuen. Kennt weder Zeichen- noch Sensor-Logik -
- * {@link ChartPanel} liefert nur Datenpunkte und eine {@link CurveFitting.FunctionEvaluator} und
- * erhält ein fertiges Ergebnis zurück.
- *
- * <p>Einzige Quelle der Wahrheit für die Chi²-Schwellenwerte - {@link ChiSquareInfoDialog}
- * fragt ausschließlich hier ab, damit Diagramm-Overlay und Detail-Dialog niemals unterschiedliche
- * Grenzwerte verwenden können.</p>
+ * nötige Messunsicherheit (sigma) aus den Fit-Residuen.
  */
 public final class GoodnessOfFit {
 
@@ -31,32 +25,20 @@ public final class GoodnessOfFit {
         MODERATE,
         /** &gt; {@link #CHI_MODERATE_THRESHOLD}: Modell passt schlecht (Unteranpassung). */
         UNDERFIT,
-        /** Freiheitsgrade &le; 0 (siehe {@link #calculateReducedChiSquare}) - zu wenige Datenpunkte
-         *  für die Anzahl der Modellparameter, kein sinnvoller Chi²-Wert berechenbar. Tritt in der
-         *  Praxis vor allem nach starkem Hineinzoomen auf, z. B. ein Rubber-Band-Fenster mit genau
-         *  den laut {@link ChartViewport} minimal nötigen zwei Punkten bei einem linearen Fit. */
+        /** Freiheitsgrade &le; 0: zu wenige Datenpunkte für die Anzahl der Modellparameter. */
         NOT_EVALUABLE
     }
 
-    /**
-     * Wie die Messunsicherheit sigma bestimmt wird, die in Chi²-Berechnung und Toleranzband
-     * eingeht (siehe {@link StandardDeviationDialog}). Die automatischen Modi setzen einen
-     * aktiven Fit voraus - ist keiner aktiv, fällt {@link #estimateSigma} auf den konstanten
-     * Rückfallwert zurück.
-     */
+    /** Wie die Messunsicherheit sigma bestimmt wird. Die automatischen Modi benötigen einen
+     *  aktiven Fit; ohne Fit fällt {@link #estimateSigma} auf den konstanten Wert zurück. */
     public enum SigmaMode {
-        /** Ein einziger, manuell eingegebener Wert für alle Punkte (bisheriges Verhalten). */
+        /** Ein einziger, manuell eingegebener Wert für alle Punkte. */
         CONSTANT,
-        /** Ortsabhängiger Wert je Punkt, aus der Streuung der k nächsten Nachbarn (hartes Fenster,
-         *  Indexabstand) um den Fit geschätzt - passt sich ungleichmäßig verteiltem Rauschen
-         *  entlang der Messreihe an, springt an den Fenstergrenzen aber sprunghaft statt sanft. */
+        /** Ortsabhängiger Wert je Punkt, aus der Streuung der k nächsten Nachbarn (hartes
+         *  Indexfenster) um den Fit geschätzt. */
         RESIDUAL_LOCAL,
-        /** Wie {@link #RESIDUAL_LOCAL}, aber statt eines harten Fensters mit fließendem
-         *  Gauß-Kernel über den tatsächlichen X-Abstand gewichtet - jeder Punkt trägt zu jedem
-         *  sigma(x) bei, mit abnehmendem Gewicht je weiter er von x entfernt liegt. Dadurch
-         *  verläuft sigma(x) glatt statt stufig, und ist (anders als {@link #RESIDUAL_LOCAL})
-         *  auch bei ungleichmäßig verteilten Messpunkten sauber definiert, da nach X-Abstand statt
-         *  nach Index gewichtet wird (siehe {@link #gaussianWeightedSigma}). */
+        /** Wie {@link #RESIDUAL_LOCAL}, aber mit fließendem Gauß-Kernel über den X-Abstand
+         *  gewichtet statt hartem Fenster - dadurch glatt statt stufig. */
         RESIDUAL_LOCAL_GAUSSIAN
     }
 
@@ -71,13 +53,9 @@ public final class GoodnessOfFit {
         }
     }
 
-    /**
-     * Ergebnis von {@link #estimateSigma}. Je nach {@link SigmaMode} ist nur eines der beiden
-     * Felder belegt (das jeweils andere {@code null}) - {@link #localSigmas} für
-     * {@link SigmaMode#RESIDUAL_LOCAL}, {@link #residuals} (zusammen mit {@link #gaussianBandwidth})
-     * für {@link SigmaMode#RESIDUAL_LOCAL_GAUSSIAN}. Für {@link SigmaMode#CONSTANT} sind beide
-     * {@code null} - dort wird direkt der konstante Wert verwendet, ohne diese Klasse.
-     */
+    /** Ergebnis von {@link #estimateSigma}. Je nach {@link SigmaMode} ist nur eines von
+     *  {@link #localSigmas} und {@link #residuals} belegt; für {@link SigmaMode#CONSTANT} beide
+     *  {@code null}. */
     public static final class SigmaEstimate {
         public final double[] localSigmas;
         public final double[] residuals;
@@ -93,8 +71,7 @@ public final class GoodnessOfFit {
     /**
      * Ordnet einen reduzierten Chi-Quadrat-Wert einer {@link ChiRating} zu.
      *
-     * @param reducedChiSquare Wert aus {@link #calculateReducedChiSquare}; {@link Double#NaN}
-     *                         (Freiheitsgrade &le; 0, siehe dort) liefert {@link ChiRating#NOT_EVALUABLE}.
+     * @param reducedChiSquare {@link Double#NaN} liefert {@link ChiRating#NOT_EVALUABLE}
      */
     public static ChiRating rate(double reducedChiSquare) {
         if (Double.isNaN(reducedChiSquare)) return ChiRating.NOT_EVALUABLE;
@@ -104,13 +81,7 @@ public final class GoodnessOfFit {
         return ChiRating.UNDERFIT;
     }
 
-    /**
-     * Liefert die Anzeigefarbe für einen reduzierten Chi-Quadrat-Wert, konsistent mit
-     * {@link #rate(double)}.
-     *
-     * @return Grün für einen guten Fit, Gelb für Über-/mäßige Anpassung, Rot für Unteranpassung,
-     *         Grau für {@link ChiRating#NOT_EVALUABLE}
-     */
+    /** Liefert die Anzeigefarbe für einen reduzierten Chi-Quadrat-Wert, konsistent mit {@link #rate(double)}. */
     public static Color colorFor(double reducedChiSquare) {
         return switch (rate(reducedChiSquare)) {
             case OVERFIT, MODERATE -> Theme.WARNING;
@@ -121,18 +92,11 @@ public final class GoodnessOfFit {
     }
 
     /**
-     * Berechnet das reduzierte Chi-Quadrat für eine gegebene Fit-Funktion:
-     * chi²_red = (1 / DOF) * Summe((y_i - f(x_i))² / sigma_i²), DOF = n - Parameteranzahl.
+     * Berechnet das reduzierte Chi-Quadrat: chi²_red = (1/DOF) * Summe((y_i - f(x_i))²/sigma_i²),
+     * DOF = n - Parameteranzahl.
      *
-     * @param data           die Datenpunkte, auf denen der Fit beruht
-     * @param func           die angepasste Funktion
-     * @param parameterCount Anzahl der freien Parameter des Modells (für die Freiheitsgrade)
-     * @param sigmaAt        liefert die Standardabweichung für den Punkt mit gegebenem Index
-     * @return bei nicht-positiven Freiheitsgraden (zu wenige Datenpunkte für die Parameterzahl,
-     *         z. B. nach starkem Hineinzoomen) {@link ChiSquareResult#reducedChiSquare} als
-     *         {@link Double#NaN} statt eines irreführenden Zahlenwerts - {@link #rate(double)}
-     *         bildet das auf {@link ChiRating#NOT_EVALUABLE} ab; {@code degreesOfFreedom} bleibt
-     *         dabei der tatsächliche (nicht-positive) Wert, nicht auf 1 gefälscht
+     * @return bei nicht-positiven Freiheitsgraden {@link Double#NaN} statt eines irreführenden
+     *         Zahlenwerts; {@code degreesOfFreedom} bleibt dabei der tatsächliche, nicht-positive Wert
      */
     public static ChiSquareResult calculateReducedChiSquare(List<double[]> data, CurveFitting.FunctionEvaluator func,
                                                             int parameterCount, IntToDoubleFunction sigmaAt) {
@@ -155,23 +119,13 @@ public final class GoodnessOfFit {
     }
 
     /**
-     * Schätzt sigma aus den Fit-Residuen, sofern {@code mode} dies verlangt. Grundidee: Ohne
-     * bekannte Messunsicherheit lässt sich sigma aus der tatsächlichen Streuung der Messwerte um
-     * den aktuellen Fit schätzen - unter der (für viele Messungen plausiblen) Annahme
-     * gaußverteilten Rauschens ist die (lokal gewichtete) empirische Standardabweichung der
-     * Residuen genau dieser Schätzer.
+     * Schätzt sigma aus den Fit-Residuen, sofern {@code mode} dies verlangt.
      *
-     * @param data              die Datenpunkte, auf denen der Fit beruht
-     * @param func              die angepasste Funktion, oder {@code null} ohne aktiven Fit
-     * @param parameterCount    Anzahl der freien Parameter (aktuell ungenutzt, für zukünftige Modi vorgehalten)
-     * @param mode              der gewünschte Sigma-Modus
-     * @param localNeighbors    Nachbarschaftsgröße k ({@link SigmaMode#RESIDUAL_LOCAL}: Fenstergröße;
-     *                          {@link SigmaMode#RESIDUAL_LOCAL_GAUSSIAN}: Bandbreite, siehe {@link #gaussianBandwidthFor})
-     * @param fallbackConstant  Rückfallwert ohne Fit bzw. bei zu wenig Daten
+     * @param func             die angepasste Funktion, oder {@code null} ohne aktiven Fit
+     * @param localNeighbors   Nachbarschaftsgröße k (Fenstergröße bzw. Bandbreiten-Basis)
      */
     public static SigmaEstimate estimateSigma(List<double[]> data, CurveFitting.FunctionEvaluator func,
-                                              int parameterCount, SigmaMode mode, int localNeighbors,
-                                              double fallbackConstant) {
+                                              SigmaMode mode, int localNeighbors) {
         int n = data.size();
         if (func == null || n == 0 || mode == SigmaMode.CONSTANT) {
             return new SigmaEstimate(null, null, 0);
@@ -188,7 +142,6 @@ public final class GoodnessOfFit {
             return new SigmaEstimate(null, residuals, bandwidth);
         }
 
-        // RESIDUAL_LOCAL (hartes Fenster)
         int k = Math.max(1, Math.min(localNeighbors, n - 1));
         double[] localSigmas = new double[n];
         for (int i = 0; i < n; i++) {
@@ -197,12 +150,7 @@ public final class GoodnessOfFit {
         return new SigmaEstimate(localSigmas, null, 0);
     }
 
-    /**
-     * Mittlere quadratische Residuenstreuung im Index-Fenster um Punkt {@code i}. Da die
-     * Datenpunkte zeitlich aufsteigend sortiert sind, entsprechen benachbarte Indizes den in X
-     * nächstgelegenen Nachbarn - deutlich günstiger als eine echte Abstandssuche und für
-     * annähernd gleichmäßig abgetastete Messreihen äquivalent dazu.
-     */
+    /** Mittlere quadratische Residuenstreuung im Index-Fenster um Punkt {@code i}. */
     private static double localWindowStdDev(double[] residuals, int i, int k) {
         int n = residuals.length;
         int half = Math.max(1, k / 2);
@@ -223,16 +171,11 @@ public final class GoodnessOfFit {
         return Math.sqrt(sumSq / count);
     }
 
-    /**
-     * Wandelt die Nachbarschaftsgröße k in eine Gauß-Bandbreite (Standardabweichung des Kernels,
-     * in X-Einheiten) um: Bandbreite = k/2 mittlere Punktabstände, sodass k in etwa vergleichbar
-     * mit der Fenstergröße von {@link SigmaMode#RESIDUAL_LOCAL} bleibt - ein Wechsel zwischen
-     * beiden Modi bei gleichem k liefert also eine ähnlich "breite" Nachbarschaft, nur mit
-     * weichem statt hartem Übergang an den Rändern.
-     */
+    /** Wandelt die Nachbarschaftsgröße k in eine Gauß-Bandbreite (Standardabweichung des
+     *  Kernels, in X-Einheiten) um. */
     private static double gaussianBandwidthFor(List<double[]> data, int k) {
         int n = data.size();
-        double span = data.get(n - 1)[0] - data.get(0)[0];
+        double span = data.get(n - 1)[0] - data.getFirst()[0];
         if (n < 2 || span <= 0) return 1.0;
         double avgSpacing = span / (n - 1);
         return Math.max(avgSpacing * 1e-3, (Math.max(1, k) / 2.0) * avgSpacing);
@@ -240,16 +183,7 @@ public final class GoodnessOfFit {
 
     /**
      * Gauß-gewichtete Streuung der Residuen an der Stelle {@code x}: jeder Datenpunkt trägt
-     * gemäß {@code exp(-(x_j - x)² / (2·bandwidth²))} bei, statt wie bei
-     * {@link #localWindowStdDev} hart auf ein Fenster von k Nachbarn abzuschneiden. Das Ergebnis
-     * ist eine glatte, für jedes x (auch zwischen Messpunkten, z. B. für das Toleranzband)
-     * direkt auswertbare Funktion - anders als bei {@link SigmaMode#RESIDUAL_LOCAL} ist dafür
-     * keine Interpolation zwischen vorab berechneten Stützstellen nötig.
-     *
-     * @param data      die Datenpunkte, deren {@code residuals} hier gewichtet einfließen
-     * @param residuals Residuen (y - f(x)) je Datenpunkt, siehe {@link SigmaEstimate#residuals}
-     * @param bandwidth Gauß-Bandbreite, siehe {@link #gaussianBandwidthFor}
-     * @param x         die Stelle, an der sigma ausgewertet werden soll
+     * gemäß {@code exp(-(x_j - x)²/(2·bandwidth²))} bei, statt hart auf k Nachbarn abzuschneiden.
      */
     public static double gaussianWeightedSigma(List<double[]> data, double[] residuals, double bandwidth, double x) {
         if (residuals == null || residuals.length == 0) return 0;
@@ -271,23 +205,17 @@ public final class GoodnessOfFit {
 
     /**
      * Lineare Interpolation der je Punkt geschätzten lokalen Sigma-Werte zwischen den beiden
-     * Datenpunkten, die {@code x} einschließen - für Stellen zwischen echten Messpunkten (z. B.
-     * beim Zeichnen des Toleranzbands mit vielen Zwischenschritten), ausschließlich für
-     * {@link SigmaMode#RESIDUAL_LOCAL} genutzt ({@link SigmaMode#RESIDUAL_LOCAL_GAUSSIAN}
-     * benötigt das nicht, siehe {@link #gaussianWeightedSigma}). Außerhalb des Datenbereichs
-     * wird der jeweilige Randwert fortgeschrieben.
+     * Datenpunkten, die {@code x} einschließen; außerhalb des Datenbereichs wird der jeweilige
+     * Randwert fortgeschrieben. Nur für {@link SigmaMode#RESIDUAL_LOCAL} genutzt.
      *
-     * @param data        die Datenpunkte, zu denen {@code localSigmas} passt
-     * @param localSigmas je Punkt geschätzte Sigma-Werte (siehe {@link SigmaEstimate#localSigmas})
-     * @param x           die Stelle, an der interpoliert werden soll
-     * @param fallback    Rückgabewert, falls keine lokalen Sigma-Werte vorliegen
+     * @param fallback Rückgabewert, falls keine lokalen Sigma-Werte vorliegen
      */
     public static double interpolateLocalSigma(List<double[]> data, double[] localSigmas, double x, double fallback) {
         if (localSigmas == null || data.isEmpty()) return fallback;
         int n = data.size();
         if (n == 1) return localSigmas[0];
 
-        if (x <= data.get(0)[0]) return localSigmas[0];
+        if (x <= data.getFirst()[0]) return localSigmas[0];
         if (x >= data.get(n - 1)[0]) return localSigmas[n - 1];
 
         int lo = 0, hi = n - 1;
